testsuite/tests/indexed-types/should_fail/T12041.stderr

T12041.hs:12:8: error:
    • Type indexes must match class instance head
      Expected: Ob I
        Actual: Ob I
      Use -fprint-explicit-kinds to see the kind arguments
    • In the type instance declaration for ‘Ob’
      In the instance declaration for ‘Category I’
